adicionei mais um parágrafo
mais um parágrafo

--- a/site exemplo/index.html
+++ b/site exemplo/index.html
@@ -10,5 +10,7 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus consequuntur cumque accusamus, ab obcaecati quis, delectus omnis nobis, expedita molestiae voluptatibus! Totam expedita vero qui maiores quibusdam non, nobis nihil.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi provident repellendus excepturi dolores, magni dolorum ex sed accusantium quae quam corporis cumque eveniet ab odio et quis deserunt, quia explicabo!</p>
+    <p></p>
 </body>
 </html>
